#Issue 8  - Ajuste Front login

--- a/src/Web/WebSPA/ips-webapp/src/app/Features/Login/login.component.css
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/Login/login.component.css
@@ -6,11 +6,11 @@
 	align-items: center;
 	min-height: 100vh;
 	font-family: 'Jost', sans-serif;
-	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+	background: linear-gradient(to bottom, #60a4b799, #006986cc, #002a35);
 }
 .main{
-	width: 600px;
-    height: 900px;
+	width: 700px;	
+    height: 1000px;
 	background: red;
 	overflow: hidden;
 	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
@@ -27,7 +27,7 @@
 }
 label{
 	color: #fff;
-	font-size: 2.3em;
+	font-size: 3.3em;
 	justify-content: center;
 	display: flex;
 	margin: 60px;
@@ -54,7 +54,6 @@ button{
 	justify-content: center;
 	display: block;
 	color: #fff;
-	background: #573b8a;
 	font-size: 1em;
 	font-weight: bold;
 	margin-top: 20px;
@@ -69,7 +68,7 @@ button:hover{
 }
 .login{
 	height: 650px;
-	background: #eee;
+	background: #ffffff;
 	border-radius: 60% / 10%;
 	transform: translateY(-180px);
 	transition: .8s ease-in-out;
