--- a/src/Web/WebSPA/ips-webapp/src/styles.css
+++ b/src/Web/WebSPA/ips-webapp/src/styles.css
@@ -1,1 +1,9 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+/* Override em algumas classe bootstrap */
+
+.container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+    max-width: 1550px !important;
+}
+
+/* Override em algumas classe bootstrap -FIM- */
