--- a/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
@@ -3,17 +3,75 @@
 <div class="container">
      <div class="row">
         <div class="col-8">
-            <div class="">
-              <div class="mb-3">
-                <label for="postagem" class="form-label">IPS Here</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" maxlength="300"></textarea>
-              </div>  
-            </div> 
-        </div>
-        <div class="col-4">
-            BAIRROS
+          
+          
+          <mat-card class="example-card mt-4">
+            <mat-card-header>
+              <div mat-card-avatar class="example-header-image"></div>
+              <mat-card-title>Shiba Inu</mat-card-title>
+              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+              <p>
+                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+                bred for hunting.
+              </p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button>LIKE</button>    
+              <button mat-button>SHARE</button>
+            </mat-card-actions>
+          </mat-card>
 
-            EVENTOS
+          <mat-card class="example-card mt-4">
+            <mat-card-header>
+              <div mat-card-avatar class="example-header-image"></div>
+              <mat-card-title>Shiba Inu</mat-card-title>
+              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+              <p>
+                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+                bred for hunting.
+              </p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button>LIKE</button>    
+              <button mat-button>SHARE</button>
+            </mat-card-actions>
+          </mat-card>
+
+        </div>
+        <div class="p-5 col-4">
+            <!-- CRIAR UM COMPONENT  -->
+            
+            <h3>Santa Cruz</h3>
+            <mat-list>
+              <mat-list-item>
+                <span matListItemLine>Assalto na estação de trem</span>
+                <span matListItemLine>Valor do salgado da IV</span>
+              </mat-list-item>
+             </mat-list>
+             
+            <h3>Tijuca</h3>
+            <mat-list>
+              <mat-list-item>
+                <span matListItemLine>Assalto na estação de trem</span>
+                <span matListItemLine>Valor do salgado da IV</span>
+              </mat-list-item>
+             </mat-list>
+
+            <h3>Flamengo</h3>
+            <mat-list>
+              <mat-list-item>
+                <span matListItemLine>Assalto na estação de trem</span>
+                <span matListItemLine>Valor do salgado da IV</span>
+              </mat-list-item>
+             </mat-list>
+           
+            <!-- CRIAR UM COMPONENT  -->
         </div>
      </div>
 </div>
