--- a/src/Web/WebSPA/ips-webapp/src/styles.css
+++ b/src/Web/WebSPA/ips-webapp/src/styles.css
@@ -7,3 +7,5 @@
 }
 
 /* Override em algumas classe bootstrap -FIM- */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
