#Issue8 -  usando o mat-icons - Feature

--- a/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
@@ -45,9 +45,13 @@
 
         </div>
         <div class="p-5 col-4">
-            <!-- CRIAR UM COMPONENT  -->
-            
-            <h3>Santa Cruz</h3>
+
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Shiba Inu</mat-card-title>
+            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+            <hr>
+            <h3 class="pt-5">Santa Cruz</h3>
+
             <mat-list>
               <mat-list-item>
                 <span matListItemLine>Assalto na estação de trem</span>
