--- a/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
@@ -5,43 +5,7 @@
         <div class="col-8">
           
           
-          <mat-card class="example-card mt-4">
-            <mat-card-header>
-              <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>Shiba Inu</mat-card-title>
-              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-content>
-              <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
-              </p>
-            </mat-card-content>
-            <mat-card-actions>
-              <button mat-button>LIKE</button>    
-              <button mat-button>SHARE</button>
-            </mat-card-actions>
-          </mat-card>
-
-          <mat-card class="example-card mt-4">
-            <mat-card-header>
-              <div mat-card-avatar class="example-header-image"></div>
-              <mat-card-title>Shiba Inu</mat-card-title>
-              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-content>
-              <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
-              </p>
-            </mat-card-content>
-            <mat-card-actions>
-              <button mat-button>LIKE</button>    
-              <button mat-button>SHARE</button>
-            </mat-card-actions>
-          </mat-card>
+          <app-post-list></app-post-list>
 
         </div>
         <div class="p-5 col-4">
