#Issue8 - Incluindo nome no localStorage - Feature

--- a/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
@@ -10,10 +10,14 @@
         </div>
         <div class="p-5 col-4">
 
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Shiba Inu</mat-card-title>
-            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-            <hr>
+            <div class="infousuario">
+              <div mat-card-avatar class="example-header-image"></div>
+              <mat-card-title>Bem vindo</mat-card-title>
+              <mat-card-subtitle>{{nome}}</mat-card-subtitle>
+              <hr>
+            </div>
+
+
             <h3 class="pt-5">Santa Cruz</h3>
 
             <mat-list>
