--- a/src/Web/WebSPA/ips-webapp/src/app/Features/Navbar/navbar.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/Navbar/navbar.component.html
@@ -10,20 +10,9 @@
         <input type="search" class="col-sm-2 form-control col-form-label" placeholder="Buscar..." aria-label="Search">
       </form>
 
-      <div class="dropdown text-end">
-        
-        <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" style="">
-          <li><a class="dropdown-item" href="#">New project...</a></li>
-          <li><a class="dropdown-item" href="#">Settings</a></li>
-          <li><a class="dropdown-item" href="#">Profile</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Sign out</a></li>
-        </ul>
-      </div>
-
       
       <button mat-mini-fab [matMenuTriggerFor]="menu" color="primary" aria-label="Example icon button with a menu icon">
-        <mat-icon>home</mat-icon>
+        <mat-icon>perm_identity</mat-icon>
       </button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item>
@@ -36,7 +25,11 @@
         </button>
         <button mat-menu-item>
           <mat-icon>notifications_off</mat-icon>
-          <span>Disable alerts</span>
+          <span>Desativa alerta</span>
+        </button>
+        <button mat-menu-item (click)="logout()" >
+          <mat-icon>power_settings_new</mat-icon>
+          <span >Sair</span>
         </button>
       </mat-menu>
 
