#Issu8 - Ao logar, apresentar imagem do usuario - Feature

--- a/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
@@ -11,7 +11,7 @@
         <div class="p-5 col-4">
 
             <div class="infousuario">
-              <div mat-card-avatar class="example-header-image"></div>
+              <img src="" class="rounded" id="profileLogao" alt="Usario XPTO">
               <mat-card-title>Bem vindo</mat-card-title>
               <mat-card-subtitle>{{nome}}</mat-card-subtitle>
               <hr>
