--- a/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.css
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.css
@@ -11,3 +11,13 @@
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
 }
+
+#profileLogao{
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    flex-shrink: 0;
+    margin-bottom: 16px;
+    object-fit: cover;
+    background-size: cover;
+}
