#issue8 - modificação no serviço obter nome e apresentação - FIX

--- a/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
@@ -3,47 +3,14 @@
 <div class="container">
      <div class="row">
         <div class="col-8">
-          
-          
+
           <app-post-list></app-post-list>
 
         </div>
         <div class="p-5 col-4">
 
-            <div class="infousuario">
-              <img src="" class="rounded" id="profileLogao" alt="Usario XPTO">
-              <mat-card-title>Bem vindo</mat-card-title>
-              <mat-card-subtitle>{{nome}}</mat-card-subtitle>
-              <hr>
-            </div>
-
-
-            <h3 class="pt-5">Santa Cruz</h3>
-
-            <mat-list>
-              <mat-list-item>
-                <span matListItemLine>Assalto na estação de trem</span>
-                <span matListItemLine>Valor do salgado da IV</span>
-              </mat-list-item>
-             </mat-list>
-             
-            <h3>Tijuca</h3>
-            <mat-list>
-              <mat-list-item>
-                <span matListItemLine>Assalto na estação de trem</span>
-                <span matListItemLine>Valor do salgado da IV</span>
-              </mat-list-item>
-             </mat-list>
-
-            <h3>Flamengo</h3>
-            <mat-list>
-              <mat-list-item>
-                <span matListItemLine>Assalto na estação de trem</span>
-                <span matListItemLine>Valor do salgado da IV</span>
-              </mat-list-item>
-             </mat-list>
-           
-            <!-- CRIAR UM COMPONENT  -->
+            <app-sidebar></app-sidebar>
+            
         </div>
      </div>
 </div>
