#Issue8 - Ajuste no feed para postagem list e add - Feature

--- a/src/Web/WebSPA/ips-webapp/src/app/Features/Login/login.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/Login/login.component.html
@@ -50,7 +50,7 @@
                     </span>
 
                     <div class="d-grid gap-2 form-group">
-                        <button type="submit" class="btnLogin btn btn-primary btn-lg mt-3" >Registra</button>
+                        <button type="submit" class="btnLogin btn btn-primary btn-lg mt-3" >Registrar</button>
                     </div>
 				</form>
 			</div>
