--- a/src/Web/WebSPA/ips-webapp/src/app/Features/Navbar/navbar.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/Navbar/navbar.component.html
@@ -11,7 +11,7 @@
       </form>
 
       
-      <button mat-mini-fab [matMenuTriggerFor]="menu" color="primary" aria-label="Example icon button with a menu icon">
+      <button mat-mini-fab [matMenuTriggerFor]="menu" color="primary" aria-label="Configuração">
         <mat-icon>perm_identity</mat-icon>
       </button>
       <mat-menu #menu="matMenu">
