--- a/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.html
@@ -4,6 +4,7 @@
      <div class="row">
         <div class="col-8">
 
+          <app-post-add></app-post-add>
           <app-post-list></app-post-list>
 
         </div>
