--- a/src/Web/WebSPA/ips-webapp/src/app/Features/post/post-add/post-add.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/post/post-add/post-add.component.html
@@ -1,1 +1,31 @@
-<p>post-add works!</p>
+
+  <mat-card>
+    <mat-card-content>
+      <mat-tab-group class="demo-tab-group">
+        <form [formGroup]="postForm">
+            <mat-tab label="post">
+            <ng-template mat-tab-label>
+                <mat-icon>security</mat-icon>
+            </ng-template>
+            <div class="demo-tab-content">
+                <label class="sr-only" for="mensagem">post</label>
+                <textarea maxlength="250" minlength="5" class="form-control" [formControl]="postForm.controls.mensagem" id="mensagem" rows="3" placeholder="O que está ocorrendo na sua região?"></textarea>
+                <button type="submit" class="mt-4" mat-raised-button color="primary" (click)="addPost()">Compartilhar</button>
+            </div>
+            </mat-tab>
+
+        </form>
+        <mat-tab label="Tab 2">
+          <ng-template mat-tab-label>
+            <mat-icon>attach_file</mat-icon>
+          </ng-template>
+          <div class="demo-tab-content">
+
+                EM DESENVOLVIMENTO
+            
+          </div>  
+        </mat-tab>
+      </mat-tab-group>
+    </mat-card-content>
+  </mat-card>
+  
