--- a/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.css
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/feed/feed.component.css
@@ -19,3 +19,46 @@
     position: absolute;
     left: 93%;
 }
+
+.details{
+    border: none;
+    background: none;
+}
+
+.comment-input{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.mat-mdc-form-field{
+    width: 95%;
+    margin: 2px;
+}
+.card-footer{
+    background-color: #e3e2e2;
+    padding: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+a{
+    text-decoration: none;
+}
+
+.comment {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin-bottom: 10px;
+    padding: 20px;
+    padding-top: 41px;
+}  
+  
+  .comment-header {
+    font-weight: bold; 
+  }
+  
+  .comment-input {
+    margin-bottom: 10px; 
+  }
+  
