--- a/src/Web/WebSPA/ips-webapp/src/app/Features/post/post-list/post-list.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/post/post-list/post-list.component.html
@@ -3,7 +3,7 @@
   <mat-card class="example-card mt-4">
       <mat-card-header>
         <span [hidden]="true"> {{postagem.id}}</span>
-        <mat-card-title>{{postagem.nomeUsuario}}</mat-card-title>
+        <mat-card-title class="pb-3">{{postagem.nomeUsuario}}</mat-card-title>
         <mat-card-subtitle>{{postagem.bairro}} - {{postagem.regiao}}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
@@ -12,11 +12,12 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-icon-button color="warn"> 
-          <mat-icon>favorite</mat-icon>
-        </button>    
-        <button mat-button>SHARE</button>
       </mat-card-actions>
+      <div class="card-footer">
+        <a class="card-link"><i class="fa fa-gittip"></i> <span matBadge={{postagem.totalCurtidas}}>Curtidas</span></a>
+        <a class="details" [routerLink]="['/detalhes', postagem.id]"> <i class="fa fa-comment"></i> Comentario</a>
+        <a class="card-link"><i class="fa fa-mail-forward"></i> Compartilhar</a>
+      </div>
       <button class="config" mat-icon-button aria-label="Example icon button with a vertical three dot icon">
         <mat-icon>more_vert</mat-icon>
       </button>
