--- a/src/Web/WebSPA/ips-webapp/src/app/Features/Login/login.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/Login/login.component.html
@@ -15,17 +15,17 @@
                 </div>
 				<form class="form" #registerForm="ngForm" [appMatchPassword]="['Senha', 'SenhaConfirmacao']" (ngSubmit)="registerForm.form.valid && onSignUp()" novalidate >
                     <div class="form-group">
-                        <input name="txt" [(ngModel)]="signupObj.userName" class="form-control form-control-lg mt-3" id="UserName" type="text" placeholder="Usuario" required />
+                        <input name="txt" [(ngModel)]="signupObj.userName" class="form-control form-control-lg mt-3" id="UserName" type="text" placeholder="Usuario" maxlength="25" required />
                     </div>     
 
                     <div class="form-group">
-                        <input name="txt" [(ngModel)]="signupObj.celular" type="text" class="form-control form-control-lg mt-3"  placeholder="Celular"  />
+                        <input name="celular" [(ngModel)]="signupObj.celular" type="text" class="form-control form-control-lg mt-3"  placeholder="Celular"  [dropSpecialCharacters]="false" placeholder="(xx) 0000-0000"  mask="(00) 0000-0000" />
                         
                     </div>
 
                     <div class="form-group">
-                        <input name="txt" [(ngModel)]="signupObj.nascimento" type="text" class="form-control form-control-lg mt-3" placeholder="Data de Nascimento" />
-                        
+                        <input name="nascimento" [(ngModel)]="signupObj.nascimento" type="text" class="form-control form-control-lg mt-3" [dropSpecialCharacters]="false" mask="d0/M0/0000" placeholder="Data de Nascimento" />
+                            
                     </div>
                     <div class="form-group">
                         <input name="email" [(ngModel)]="signupObj.email" type="email" class="form-control form-control-lg mt-3" placeholder="Email" />
