--- a/src/Web/WebSPA/ips-webapp/src/app/Features/Navbar/navbar.component.css
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/Navbar/navbar.component.css
@@ -1,5 +1,3 @@
-
-
 #flipkart-navbar {
     background-color: #006986cc;
     color: #FFFFFF;
@@ -9,4 +7,11 @@
     input[type=search]{
             width: 25REM;
     }
+}
+
+.logo {
+    width: auto; 
+    height: 100%; 
+    max-height: auto; 
+    margin: 0 15px; 
 }
