--- a/src/Web/WebSPA/ips-webapp/src/app/Features/Navbar/navbar.component.html
+++ b/src/Web/WebSPA/ips-webapp/src/app/Features/Navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
      
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><span class="fs-3">IPS</span></li>
+        <img class=" logo" src="./assets/logonavbar.png" alt="" />
       </ul>
 
       <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-3">
